# data-contract-enforcer

./: .gitignore  DOMAIN_NOTES.md  README.md  SPRINT.md  TRP1 Practitioner Manual Data Contract Enforcer.md  pyproject.toml  requirements.txt  verify_phase.md
contract_registry/: subscriptions.yaml
contracts/: ai_extensions.py  attributor.py  generator.py  report_generator.py  runner.py  schema_analyzer.py
enforcer_report/: report_2026-04-01.md  report_2026-04-04.md  report_data.json
generated_contracts/: langsmith-trace-records.yaml  langsmith-trace-records_dbt.yml  week1-intent-code-correlator.yaml  week1-intent-code-correlator_dbt.yml  week2-digital-courtroom-verdicts.yaml  week2-digital-courtroom-verdicts_dbt.yml  week3-document-refinery-extractions.yaml  week3-document-refinery-extractions_dbt.yml  week4-brownfield-cartographer.yaml  week4-brownfield-cartographer_dbt.yml  week5-axiom-ledger-events.yaml  week5-axiom-ledger-events_dbt.yml
migration_reports/: langsmith-trace-records_evolution.jsonl  week3-document-refinery-extractions_evolution.jsonl  week5-axiom-ledger-events_evolution.jsonl
schema_snapshots/: baselines.json
scripts/: generate_outputs.py  migrate_to_canonical.py  verify_contracts.py
validation_reports/: ai_extensions.json  langsmith-trace-records_20260401T145250Z.json  langsmith-trace-records_20260401T145928Z.json  langsmith-trace-records_20260404T124523Z.json  langsmith-trace-records_20260404T130920Z.json  langsmith-trace-records_evolution.jsonl  schema_evolution_week3.json  schema_evolution_week5.json  (+21 more)
violation_log/: violations.jsonl
(+29 files in other folders)
